# ContentAnalyzer

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
src/trend_analyzer/: __init__.py  __main__.py  config.py  main.py  models.py
src/trend_analyzer/analyzer/: __init__.py  promotion_detector.py  trend_detector.py
src/trend_analyzer/scrapers/: __init__.py  base.py  instagram_scraper.py  threads_scraper.py
tests/: test_promotion_detector.py  test_trend_detector.py
